<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".AddFidelityCardActivity">


    <TextView
        android:id="@+id/tvAdaugaCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="16dp"
        android:text="@string/adauga_card"
        style="@style/TextviewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCardNumber"
        android:layout_width="375dp"
        android:layout_height="44dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/enter_card_number"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAdaugaCard" />

    <EditText
        android:id="@+id/editTextCompanie"
        android:layout_width="376dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/tv_numele_companiei"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCardNumber" />

    <EditText
        android:id="@+id/editTextProprietar"
        android:layout_width="380dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/hint_proprietarul_cardului"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCompanie" />

    <TextView
        android:id="@+id/tvDataExpirare"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/are_data_de_expirare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProprietar" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="371dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDataExpirare">

        <RadioButton
            android:id="@+id/rbDa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/da" />

        <RadioButton
            android:id="@+id/rbNu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/nu" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextDataExpirare"
        android:layout_width="380dp"
        android:layout_height="39dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/hint_data_expirarii"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/editTextNrPuncte"
        android:layout_width="383dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_nr_de_puncte"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDataExpirare" />

    <Button
        android:id="@+id/btnSalvareCard"
        android:layout_width="386dp"
        android:layout_height="39dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_salvare_card"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corners"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNrPuncte" />


</androidx.constraintlayout.widget.ConstraintLayout>