<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/TextviewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:text="@string/welcome_message"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="410dp"
        android:layout_height="366dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cards" />

    <Button
        android:id="@+id/btnList"
        android:textColor="@color/white"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/btn_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnGoToLogin"
        android:textColor="@color/white"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corners"
        android:drawableLeft="@drawable/ic_baseline_login_24"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/Login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnList" />


</androidx.constraintlayout.widget.ConstraintLayout>